<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <!-- directs android studio to the code that constructs the view -->


    <com.example.sudoku.SudokuBoard
        android:id="@+id/SudokuBoard"
        android:layout_width="411dp"
        android:layout_height="411dp"
        custom:boardColor="#FF000000"
        custom:cellsHighlightColor="#49C6EC"
        custom:errorColor="#FE0101"
        custom:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toTopOf="parent"
        custom:letterColor="#FF000000"
        custom:solveColor="#00FF00">

    </com.example.sudoku.SudokuBoard>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="324dp"
        android:layout_height="56dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        custom:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintHorizontal_bias="0.494"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toBottomOf="@+id/SudokuBoard"
        custom:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="btnOnePress"
            android:text="@string/One"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button2"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="btnTwoPress"
            android:text="@string/Two"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button3"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="btnThreePress"
            android:text="@string/Three"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button4"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="btnFourPress"
            android:text="@string/Four"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button5"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="btnFivePress"
            android:text="@string/Five"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="324dp"
        android:layout_height="56dp"
        android:layout_marginBottom="28dp"
        android:orientation="horizontal"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintHorizontal_bias="0.494"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toTopOf="@+id/solveTextView"
        custom:layout_constraintVertical_bias="0.919">

        <Button
            android:id="@+id/button6"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="btnSixPress"
            android:text="@string/Six"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button7"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="btnSevenPress"
            android:text="@string/Seven"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button8"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="btnEightPress"
            android:text="@string/Eight"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button9"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="btnNinePress"
            android:text="@string/Nine"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <ImageButton
            android:id="@+id/undoButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:onClick="undo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/undo" />
    </LinearLayout>

    <TextView
        android:id="@+id/clearTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="92dp"
        android:text="@string/clear"
        android:textColor="#FF000000"
        android:textSize="18sp"
        android:textStyle="bold"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <TextView
        android:id="@+id/solveTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="48dp"
        android:text="@string/solve"
        android:textColor="#FF000000"
        android:textSize="18sp"
        android:textStyle="bold"
        custom:layout_constraintEnd_toStartOf="@+id/clearTextView"
        custom:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <TextView
        android:id="@+id/randomTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/random"
        android:textColor="#FF000000"
        android:textSize="18sp"
        android:textStyle="bold"
        custom:layout_constraintEnd_toStartOf="@+id/solveTextView"
        custom:layout_constraintHorizontal_bias="0.65"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="281dp"
        android:layout_height="64dp"
        android:layout_marginTop="452dp"
        android:orientation="horizontal"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintHorizontal_bias="0.53"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageButton3"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="random"
            custom:srcCompat="@drawable/random" />

        <ImageButton
            android:id="@+id/solveButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="solve"
            custom:srcCompat="@drawable/solvebtn" />

        <ImageButton
            android:id="@+id/clearButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clear"
            custom:srcCompat="@drawable/clear" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
